--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,14 @@
         <div class="menu-item">
           <%= menu_link_to 'All users', users_path %>
         </div>
+         <% if current_user %>
+          <div class="menu-item">
+            <a href="/users/<%= current_user.id %>"><%= current_user.name %></a>
+          </div>
+        <% end %>
       </div>
 
-
+  
       <%= image_tag current_user.gravatar_url, :class => "gravatar" %>
 
       <% if current_user %>
