--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,4 +35,11 @@
       </ul>
     <% end %>
   </article>
+  <hr>
+   <h3>All Friends:</h3>
+    <ul>
+      <% @all_friends.each do |f| %>
+        <li><%= f.name %></li>
+      <% end %>
+    </ul>
 </section>
